2013-12-05  Peter Stephenson  <p.w.stephenson@ntlworld.com>

	* Daniel Shahaf: 32089:
	Functions/VCS_Info/Backends/VCS_INFO_detect_svn: tweak for
	detecting Subversion repository.

2013-12-02  Barton E. Schaefer  <schaefer@zsh.org>

	* 32080 (plus unposted second instance of same):
	Test/A05execution.ztst: suppress any error output from
	nonessential "setopt MONITOR"

2013-12-01  Peter Stephenson  <p.w.stephenson@ntlworld.com>

	* unposted: Config/version.mk: 5.0.2-test-3.

2013-11-30  Barton E. Schaefer  <schaefer@zsh.org>

	* Hong Xu: 32069: Completion/Unix/Command/_git: completion for
	"git submodule update --remote"

2013-11-29  Barton E. Schaefer  <schaefer@zsh.org>

	* 32066 (via 31985 Clemens Hammacher and 32064 Hong Xu):
	Functions/VCS_Info/Backends/VCS_INFO_get_data_git,
	Functions/VCS_Info/VCS_INFO_reposub: fix %r and %S in vcs_info
	formats when a repository subdirectory is accessed via a symlink.

2013-11-27  Barton E. Schaefer  <schaefer@zsh.org>

	* 32061: Src/utils.c: Fix "use of uninitialized memory" in metafy

2013-11-27  Peter Stephenson  <p.stephenson@samsung.com>

	* unposted, see 32054 and thread:
	Completion/Unix/Command/_cdrdao, Completion/Unix/Command/_git,
	Completion/Unix/Command/_growisofs, Etc/ChangeLog-3.0,
	Etc/ChangeLog-3.1, LICENCE, Src/Modules/clone.c,
	Src/Modules/example.c, Src/module.c: Rationalise character
	encodings: shell functions are strictly ASCII for maximum
	portability; other files needed for building and documentation
	are ASCII are UTF-8; test files may use ISO-8859-X (we don't
	require the Euro symbol) where needed to get single character
	input with the top bit set.

2013-11-25  Peter Stephenson  <p.stephenson@samsung.com>

	* unposted, see 32050, 32051: remove non-ASCII characters in
	installed functions as this causes sed on MacOS problems.

2013-11-25  Peter Stephenson  <p.w.stephenson@ntlworld.com>

	* unposted: Completion/Unix/Command/.distfiles,
	Config/version.mk: update for 5.0.2-test-2.
